add me route
